# cima-lang

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  build_dbg.bat
src/: main.c
src/executor/: error.h  executor.c  executor.h  funcs.c  funcs.h  value.h
src/executor/funcs/: funcs.c  funcs.h
src/executor/symbols/: symbol.h
src/executor/types/: type.c  type.h
src/lexer/: lexer.c  lexer.h
src/other/: built_in.c  built_in.h  operations.h
src/other/sys/: sys.c  sys.h
src/parser/: ast.h  parser.c  parser.h  parser_error.h
src/types/: type.c  type.h
tests/: 01.cima  02.cima  03.cima  04.cima  05.cima  06.cima  07.cima  chess.cima  minesweeper.cima  snake.cima
